--- a/house.html
+++ b/house.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Design</title>
     <style>
+        h1{
+            color: blue;
+        }
         body {
             display: flex;
             justify-content: center;
